--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-MONGO_URL= 'mongodb+srv://admin:Kyuba2389@backend.bi0kmfo.mongodb.net/?retryWrites=true&w=majority'
-HOST= smtp.ethereal.email
-EMAIL=jillian68@ethereal.email
-PORT_ETHEREAL=587
-NAME=Jillian Dibbert
-PASS=8T4QY18s5S2XGBtVYX
+MONGO_URL='mongodb+srv://admin:Kyuba2389@backend.bi0kmfo.mongodb.net/'
+EMAIL=djleanf@gmail.com
+PASSWORD=dtzxmnmyoipzkalu
+HOST=smtp.gmail.com
