--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URL='mongodb+srv://admin:Kyuba2389@backend.bi0kmfo.mongodb.net/'
 EMAIL=djleanf@gmail.com
 PASSWORD=dtzxmnmyoipzkalu
 HOST=smtp.gmail.com
+ClientIDGithub ='Iv1.c19bdd7f9e71d84f'
+ClientSecretGithub ='f971899ba609cc65946cc77ae04edcfa6c849e46'
